k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logitrack
  labels:
    app.kubernetes.io/name: logitrack
    app.kubernetes.io/part-of: warehouse-project
